--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title>Result</title>
+		<title>Lesson-1</title>
 	</head>
 	<body>
 		<div id="header">
