Title Change - Home

--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title>Lesson-1</title>
+		<title>Home</title>
 	</head>
 	<body>
 		<div id="header">
@@ -14,7 +14,7 @@
 					<li>Contact</li>
 				</ul>
 			</div>
-			<h2>About Me</h2>
+			<h2>Home</h2>
 		</div>
 		<div id="left">
 		<img src="http://s3.amazonaws.com/codecademy-blog/assets/puppy-main_zps26d178c5.jpg"/>
