Working Nav Bars/ Title

--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,18 @@
 					<li><a href= contact.html> Contact</a></li>
 				</ul>
 			</div>
-			<h2>About Me</h2>
+			<h2>Contact</h2>
 		</div>
-	
+		<div id="left">
+		
+		</div>
+		<div id="right">
+		
+		</div>
+		<div id="footer">
+			<div id="button">
+				<p>Send me an <span class="bold">e-mail</span>!</p>
+			</div>
+		</div>
 	</body>
 </html>
