--- a/Index.html
+++ b/Index.html
@@ -8,10 +8,10 @@
 		<div id="header">
 			<div id="navbar">
 				<ul>
-					<a href= index.html> <li>Home</li>
-					<a href= aboutme.html> <li>About Me</li>
-					<li>Plans for World Domination</li>
-					<li>Contact</li>
+					<li><a href= index.html> Home</a></li>
+					<li><a href= aboutme.html> About Me</a></li>
+					<li><a href= plans.html> Plans For World Domination</a></li>
+					<li><a href= contact.html> Contact</a></li>
 				</ul>
 			</div>
 			<h2>Home</h2>
