--- a/plans.html
+++ b/plans.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title>About Me</title>
+		<title>plansforworlddomination</title>
 	</head>
 	<body>
 		<div id="header">
