All updates done

--- a/plans-for-world-domination.html
+++ b/plans-for-world-domination.html
@@ -8,10 +8,10 @@
 		<div id="header">
 			<div id="navbar">
 				<ul>
-					<li><a href= index.html> Home</a></li>
-					<li><a href= aboutme.html> About Me</a></li>
-					<li><a href= plans.html> Plans For World Domination</a></li>
-					<li><a href= contact.html> Contact</a></li>
+					<li><a href="index.html"> Home</a></li>
+					<li><a href="about-me.html"> About Me</a></li>
+					<li><a href="plans-for-world-domination.html"> Plans For World Domination</a></li>
+					<li><a href="contact.html"> Contact</a></li>
 				</ul>
 			</div>
 			<h2>Plans For World Domination</h2>
