Sample nav link text

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,7 @@
 					<li><a href="about-me.html"> About Me</a></li>
 					<li><a href="plans-for-world-domination.html"> Plans For World Domination</a></li>
 					<li><a href="contact.html"> Contact</a></li>
+					<li>Sample Link</li>
 				</ul>
 			</div>
 			<h2>Home</h2>
