Add hover state to nav bar items text

--- a/Index.html
+++ b/Index.html
@@ -4,14 +4,14 @@
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		<title>Home</title>
 	</head>
-	<body>
+	<body id="home"> 
 		<div id="header">
 			<div id="navbar">
-				<ul>
-					<li><a href="index.html"> Home</a></li>
-					<li><a href="about-me.html"> About Me</a></li>
-					<li><a href="plans-for-world-domination.html"> Plans For World Domination</a></li>
-					<li><a href="contact.html"> Contact</a></li>
+				<ul class="nav">
+					<li id="homenav"><a href="index.html"> Home</a></li>
+					<li id="aboutnav"><a href="about-me.html"> About Me</a></li>
+					<li id="plansnav"><a href="plans-for-world-domination.html"> Plans For World Domination</a></li>
+					<li id="contactnav"><a href="contact.html"> Contact</a></li>
 				</ul>
 			</div>
 			<h2>Home</h2>
