--- a/about-me.html
+++ b/about-me.html
@@ -4,17 +4,22 @@
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		<title>About Me</title>
 	</head>
-	<body>
+	<body id="about">
 		<div id="header">
-			<div id="navbar">
-				<ul>
-					<li><a href="index.html"> Home</a></li>
-					<li><a href="about-me.html"> About Me</a></li>
-					<li><a href="plans-for-world-domination.html"> Plans For World Domination</a></li>
-					<li><a href="contact.html"> Contact</a></li>
-				</ul>
-			</div>
+		<div id="navbar">
+			<ul class="nav">
+				<li id="homenav"><a href="index.html"> Home</a></li>
+				<li id="aboutnav"><a href="about-me.html"> About Me</a></li>
+				<li id="plansnav"><a href="plans-for-world-domination.html"> Plans For World Domination</a></li>
+				<li id="contactnav"><a href="contact.html"> Contact</a></li>
+			</ul>
+		</div>
 			<h2>About Me</h2>
+		</div>
+		<div id="footer">
+			<div id="button">
+				<p>Send me an <span class="bold">e-mail</span>!</p>
+			</div>
 		</div>
 	
 	</body>
