--- a/plans-for-world-domination.html
+++ b/plans-for-world-domination.html
@@ -4,16 +4,16 @@
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		<title>plansforworlddomination</title>
 	</head>
-	<body>
+	<body id="plans">
 		<div id="header">
-			<div id="navbar">
-				<ul>
-					<li><a href="index.html"> Home</a></li>
-					<li><a href="about-me.html"> About Me</a></li>
-					<li><a href="plans-for-world-domination.html"> Plans For World Domination</a></li>
-					<li><a href="contact.html"> Contact</a></li>
-				</ul>
-			</div>
+		<div id="navbar">
+			<ul class="nav">
+				<li id="homenav"><a href="index.html"> Home</a></li>
+				<li id="aboutnav"><a href="about-me.html"> About Me</a></li>
+				<li id="plansnav"><a href="plans-for-world-domination.html"> Plans For World Domination</a></li>
+				<li id="contactnav"><a href="contact.html"> Contact</a></li>
+			</ul>
+		</div>
 			<h2>Plans For World Domination</h2>
 		</div>
 		<div id="left">
